@@ -1,3 +1,9 @@
+2018-01-22         Arnold D. Robbins     <arnold@skeeve.com>
+
+	Fix the inplace tests on *BSD systems.
+
+	* main.c (main): Add O_APPEND flag to fileno(stderr).
+
 2018-01-17         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* builtin.c (do_isarray): Check that tmp is Node_var
